# FmodDome

./: gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fmod/: MainApplication.kt
app/src/main/java/com/fmod/base/: BaseActivity.kt  BaseFragment.kt  BaseViewHolder.kt  BaseViewModel.kt
app/src/main/java/com/fmod/data/: DspEffectRepository.kt
app/src/main/java/com/fmod/effect/: EffectActivity.kt
app/src/main/java/com/fmod/main/: MainActivity.kt
app/src/main/java/com/fmod/mywork/: MyWorkActivity.kt  MyWorkViewModel.kt
app/src/main/java/com/fmod/record/: AudioRecordWav.kt  PcmToWav.java  WaveHeader.java
app/src/main/res/drawable/: bg_30b874_radius_9.xml  bg_99000000_radius_20.xml  bg_c7d0cb_radius_9.xml  bg_f3f6f7_radius_10.xml  bg_ffffff_radius_23.xml  bg_main.xml
app/src/main/res/layout/: activity_effect.xml  activity_main.xml  activity_my_work.xml  activity_splash.xml  dialog_loading.xml  dialog_save.xml  item_effect.xml  item_voice_changer.xml
app/src/main/res/raw/: loading.json  playing.json
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
fmodCore/: build.gradle  proguard-rules.pro
fmodCore/src/main/cpp/: CMakeLists.txt  FmodCore.cpp  FmodEffects.cpp  FmodPlayer.cpp  Fmodcore.cpp
fmodCore/src/main/cpp/include/: FmodEffects.h  FmodPlayer.h  FmodTask.h  Log.h
fmodCore/src/main/cpp/include/fmod/: fmod_errors.h
fmodCore/src/main/java/com/fmodcore/: EffectMode.kt  FmodCore.kt  FmodPlay.java
gradle/wrapper/: gradle-wrapper.properties
(+18 files in other folders)
